--- a/Fundoo/package.json
+++ b/Fundoo/package.json
@@ -24,9 +24,10 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime": "^5.2.6",
     "ngx-image-cropper": "^1.3.8",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
